--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!-- index.html -->
-<h1>Learning Platfrom for Marine Meteorology</h1>
-<p>Development Team of DIrectorate of Marine Meteorology</p>
-<meta http-equiv="refresh" content="0; url=https://devmetmar.github.io/marinemet-training/intro.html">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://devmetmar.github.io/marinemet-training/intro.html" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>Redirecting to <a href="https://devmetmar.github.io/marinemet-training/intro.html">MarineMet Training</a>...</p>
+  </body>
+</html>
