--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://devmetmar.github.io/marinemet-training/intro.html" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to <a href="https://devmetmar.github.io/marinemet-training/intro.html">MarineMet Training</a>...</p>
-  </body>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MarineMet Knowledge Base</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: #f0f4f8;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 1rem 0;
+    }
+    a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>📘 MarineMet Knowledge & Training</h1>
+
+  <div class="section">
+    <h2>📚 Dokumentasi</h2>
+    <ul>
+      <li><a href="https://maritim.bmkg.go.id/public_api/" target="_blank">Public API</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🎓 Sesi Pelatihan</h2>
+    <ul>
+      <li><a href="https://devmetmar.github.io/marinemet-training/intro.html" target="_blank">Pengenalan Pengolahan Data Meteorologi Maritim</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🌐 Komunitas & Dukungan</h2>
+    <ul>
+      <li><a href="https://www.instagram.com/bmkgmaritim" target="_blank">BMKG Maritim</a></li>
+      <li><a href="mailto:produksi.maritim@bmkg.go.id">Hubungi Tim Metmar</a></li>
+    </ul>
+  </div>
+</body>
 </html>
