--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="section">
     <h2>🎓 Sesi Pelatihan</h2>
     <ul>
-      <li><a href="https://devmetmar.github.io/marinemet-training/intro.html" target="_blank">Pengenalan Pengolahan Data Meteorologi Maritim</a></li>
+      <li><a href="https://devmetmar.github.io/marinemet-training/intro.html" target="_blank">Pengolahan Data Meteorologi Maritim</a></li>
     </ul>
   </div>
 
